# water_filling.py

./: .gitignore  README.md  interface.py  pyproject.toml  requirements.txt  water_filling.py
.github/workflows/: pages.yml  test.yml
test/: conftest.py  test_database.py  test_interface.py  test_numerics.py  test_serialization.py  test_static.py  test_water_filling.py
water_filling/: __init__.py  __main__.py  colors.py  database.py  interface.py  numerics.py  options.py  serialization.py  static.py  visualize.py  water_filling.py
water_filling/static/: style.css
water_filling/templates/: base.html  form.html  style.css  visualize.html
