[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "water_filling"
version = "0.1.0"
dependencies = [
  "jinja2",
  "matplotlib",
  "microdot",
  "numpy",
]
requires-python = "~= 3.12"
authors = [
  {name = "Max Kapur", email = "git@maxkapur.com"},
]
maintainers = [
  {name = "Max Kapur", email = "git@maxkapur.com"},
]
description = "Water-filling algorithm with Microdot frontend"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff",
]

[project.urls]
Homepage = "https://github.com/maxkapur/water_filling.py"
Documentation = "https://github.com/maxkapur/water_filling.py"
Repository = "https://github.com/maxkapur/water_filling.py.git"
"Bug Tracker" = "https://github.com/maxkapur/water_filling.py/issues"

[tool.ruff.lint]
extend-select = ["I"]
